--- a/fetch_orders/requirements.txt
+++ b/fetch_orders/requirements.txt
@@ -1,19 +1,19 @@
-annotated-types==0.7.0
-anyio==4.10.0
-boto3==1.40.21
-botocore==1.40.21
-fastapi==0.116.1
-idna==3.10
-jmespath==1.0.1
-mangum==0.19.0
-pydantic==2.11.7
-pydantic_core==2.33.2
-python-dateutil==2.9.0.post0
-s3transfer==0.13.1
-six==1.17.0
-sniffio==1.3.1
-starlette==0.47.3
-typing-inspection==0.4.1
-typing_extensions==4.15.0
-urllib3==2.5.0
-requests==2.31.0
+annotated-types
+anyio
+boto3
+botocore
+fastapi
+idna
+jmespath
+mangum
+pydantic
+pydantic_core
+python-dateutil
+s3transfer
+six
+sniffio
+starlette
+typing-inspection
+typing_extensions
+urllib3
+requests
